# acropole

./: Cargo.toml  DASHBOARD_SPEC.md  DESIGN.md  README.md  docker-compose.yml
baseline-collector/: Cargo.toml
baseline-collector/src/: main.rs
dashboard/: Dockerfile  nginx.conf  package.json
dashboard/public/: index.html
dashboard/src/: App.js  index.js
dashboard/src/components/: AgentDetail.js  AgentList.js  Dashboard.js  Header.js
dashboard/src/services/: api.js
deployment/: deploy.sh  integrity-agent.service  update_vm_and_baseline.sh
integrity-agent/: Cargo.toml  Dockerfile
integrity-agent/src/: fanotify_monitor.rs  main.rs  monitor.rs
integrity-common/: Cargo.toml
integrity-common/src/: lib.rs
metadata-service/: Cargo.toml  Dockerfile
metadata-service/src/: main.rs
proxmox/: README.md  meta-data.yaml  user-data.yaml  vendor-data.yaml
test-data/home/user/: test.txt
test-db/: db
