[workspace]
members = [
    "integrity-common",
    "metadata-service",
    "baseline-collector",
    "integrity-agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Golden Image Integrity System"]
license = "MIT"

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"

# Web
actix-web = "4.0"
actix-rt = "2.0"

# Storage
sled = "0.34"

# File System
walkdir = "2.0"
sha2 = "0.10"
hex = "0.4"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.0", features = ["derive"] }
